--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 <body class="inter-normal">
     <header>
         <nav class="nav-container">
-                <div class="logo">
-                    <img src="assets/logo.png" alt="Faugei Logo">
-                </div>
-                <div class="navigations">
-                    <ul>
-                        <li class="nav-items"><a href="" class="link-decoration home">Home</a></li>
-                        <li class="nav-items"><a href="" class="link-decoration shop">Shop</a></li>
-                        <li class="nav-items"><a href="" class="link-decoration aboutUs">About Us</a></li>
-                        <li class="nav-items"><a href="" class="link-decoration cart"><i
-                                    class="fi fi-bs-shopping-cart"></i> Cart (56$)</a></li>
-                    </ul>
-                </div>
+            <div class="logo">
+                <img src="assets/logo.png" alt="Faugei Logo">
+            </div>
+            <div class="navigations">
+                <ul>
+                    <li class="nav-items"><a href="" class="link-decoration home">Home</a></li>
+                    <li class="nav-items"><a href="" class="link-decoration shop">Shop</a></li>
+                    <li class="nav-items"><a href="" class="link-decoration aboutUs">About Us</a></li>
+                    <li class="nav-items"><a href="" class="link-decoration cart"><i class="fi fi-bs-shopping-cart"></i>
+                            Cart (56$)</a></li>
+                </ul>
+            </div>
         </nav>
         <div class="banner-container">
             <div class="banner-title-description">
@@ -47,7 +47,104 @@
         </div>
     </header>
     <main>
-
+        <section class="plants-card">
+            <div class="title-description">
+                <h3 class="title noto-serif-normal"><span class="span-color">Our</span> Plants</h3>
+                <p class="description">Indulge your senses with the beauty and fragrance of our fresh flower shop. From
+                    classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="cards-container">
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+                <div class="cards">
+                    <div class="plant-image">
+                        <img src="assets/sample-flower-image.png" alt="Sample Flower">
+                    </div>
+                    <div class="plant-name-price-button">
+                        <p class="plant-name">Lily Blossom</p>
+                        <p class="plant-price">20 USD</p>
+                        <a href=""><button class="btn-decoration btn-cart">ADD TO CART</button></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="subscription">
+            <div class="join">
+                <h3 class="subscription-title noto-serif-normal">Join the colorful Bunch</h3>
+                <div class="input-field">
+                    <input type="email" name="" id="Email" placeholder="Write email">
+                    <a href=""><button class="btn-decoration">Subscribe</button></a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
