added subscription secion

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <h3 class="subscription-title noto-serif-normal">Join the colorful Bunch</h3>
                 <div class="input-field">
                     <input type="email" name="" id="Email" placeholder="Write email">
-                    <a href=""><button class="btn-decoration">Subscribe</button></a>
+                    <a href=""><button class="btn-decoration subscribe-btn">Subscribe</button></a>
                 </div>
             </div>
         </section>
