addeed footer section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,38 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-logo">
+            <div class="logo-img">
+                <img src="assets/logo.png" alt="Faugei Logo">
+            </div>
+            <div class="shop-description">
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+            </div>
+        </div>
+        <div class="other-pages">
+            <ul>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Home</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">About Us</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Blog</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">FAQ</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Contact Us</a></li>
+            </ul>
+        </div>
+        <div class="feature-pages">
+            <ul>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Features</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Pricing</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Privacy Policy</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Terms of Services</a></li>
+                <li class="nav-items"><a class="link-decoration footer-links" href="">Help Center</a></li>
+            </ul>
+        </div>
+        <div class="social-media">
+            <a href=""><img src="assets/icon-linkedin.png" alt="Linked In"></a>
+            <a href=""><img src="assets/icon-twitter.png" alt="Twitter"></a>
+            <a href=""><img src="assets/icon-facebook.png" alt="Facebook"></a>
+            <a href=""><img src="assets/icon-youtube.png" alt="Youtube"></a>
+        </div>
     </footer>
 </body>
 
