added deal section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,35 @@
                 </div>
             </div>
         </section>
+        <section class="deals">
+            <div class="deals-title-discreption">
+                <h3 class="deal-title noto-serif-normal"><span class="span-color">Latest</span> Deals</h3>
+                <p class="deal-discreption">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                    From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="deal-plant">
+                <div class="bloom-ana">
+                    <div class="bloom-plant">
+                        <div class="bloom-plant-shop">
+                            <p class="bloom-title noto-serif-normal">60% Off | Bloom Plant</p>
+                            <p class="bloom-shop"><a class="link-decoration" href="">Shop Now</a></p>
+                        </div>
+                    </div>
+                    <div class="ana-plant">
+                        <div class="ana-plant-shop">
+                            <p class="ana-title noto-serif-normal">30% Off | Ana Plant</p>
+                            <p class="ana-shop"><a class="link-decoration" href="">Shop Now</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="zabo-plant">
+                    <div class="zabo-plant-shop">
+                        <p class="zabo-title noto-serif-normal">25% Off | Zabo Plant</p>
+                        <p class="zabo-shop"><a class="link-decoration" href="">Shop Now</a></p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="subscription">
             <div class="join">
                 <h3 class="subscription-title noto-serif-normal">Join the colorful Bunch</h3>
