edited deals section

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
             </div>
         </section>
         <section class="deals">
-            <div class="deals-title-discreption">
+            <div class="deals-title-description">
                 <h3 class="deal-title noto-serif-normal"><span class="span-color">Latest</span> Deals</h3>
-                <p class="deal-discreption">Indulge your senses with the beauty and fragrance of our fresh flower shop.
+                <p class="deal-description">Indulge your senses with the beauty and fragrance of our fresh flower shop.
                     From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
             </div>
             <div class="deal-plant">
