added Flower-Lover section

--- a/index.html
+++ b/index.html
@@ -136,6 +136,27 @@
                 </div>
             </div>
         </section>
+        <section class="Flower-plants-lover">
+            <div class="lover-container">
+                <div class="lover-img">
+                    <div class="badge-container">
+                        <img class="badge" src="assets/trusted-badge.png" alt="">
+                    </div>
+                    <img class="store" src="assets/flower-store.png" alt="">
+                </div>
+                <div class="lover-title-description">
+                    <h3 class="lover-title noto-serif-normal">Flower & Plants Lover</h3>
+                    <ul class="lover-description">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
         <section class="deals">
             <div class="deals-title-description">
                 <h3 class="deal-title noto-serif-normal"><span class="span-color">Latest</span> Deals</h3>
